Added some methods using RxJava and changed website icon and title