@@ -4,10 +4,9 @@ import com.project.app.model.Currency;
 import com.project.app.repository.CurrencyRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import rx.Observable;
 
-import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CurrencyService {
@@ -20,17 +19,20 @@ public class CurrencyService {
     }
 
     public List<Currency> findAllOrdered() {
-        return currencyRepository.findAll()
-                .stream()
-                .sorted(Comparator.comparing(Currency::getShortName))
-                .collect(Collectors.toList());
+        return Observable.from(currencyRepository.findAll())
+                .sorted((c1, c2) ->
+                        CharSequence.compare(c1.getShortName(), c2.getShortName()))
+                .toList()
+                .toBlocking()
+                .single();
     }
 
     public List<String> findAllShortNames() {
-        return currencyRepository.findAll()
-                .stream()
+        return Observable.from(currencyRepository.findAll())
                 .map(Currency::getShortName)
-                .collect(Collectors.toList());
+                .toList()
+                .toBlocking()
+                .single();
     }
 
     public Currency findByShortName(String shortName) {
